# apertium-quc-spa

./: Makefile.am  README  apertium-quc-spa.quc-spa.arx  apertium-quc-spa.quc-spa.dix  apertium-quc-spa.quc-spa.lrx  apertium-quc-spa.quc-spa.lsx  apertium-quc-spa.quc-spa.rtx  apertium-quc-spa.quc-spa.t3x  apertium-quc-spa.spa-quc.arx  apertium-quc-spa.spa-quc.lrx  apertium-quc-spa.spa-quc.lsx  configure.ac  modes.xml
dev/: apertium-quc-spa.quc-spa.rtx  test-sentences-quc-spa.txt  test-sentences-quc.txt  test-translations.sh
